--- a/updatetGWhatsapp.json
+++ b/updatetGWhatsapp.json
@@ -1,6 +1,5 @@
 {
-  "version": "1.2.0",
-  "message": "تم إضافة ميزات جديدة وتحسين أداء التطبيق!",
-  "force_update": false,
-  "download_url": "https://example.com/download"
+  "versionCode": 1.0.0,
+  "versionName": "2.26.3.79",
+  "updateUrl": "https://example.com"
 }
