Update version code and URL in JSON file

--- a/updatetGWhatsappios.json
+++ b/updatetGWhatsappios.json
@@ -1,5 +1,5 @@
 {
-  "versionCode": 1.2.0,
-  "updateUrl": "https://example.com"
+  "versionCode": 20,
+  "versionName": "2.26.3.80",
+  "updateUrl": "https://t.me/islaam_tigeer"
 }
-
